--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 		<link href="../dist/output.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1 class="text-4xl font-bold underline">Hello world!</h1>
+		<h1 class="text-3xl">Hello world!</h1>
 	</body>
 </html>
