--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,35 @@
 		<link href="../dist/output.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1 class="text-3xl">Hello world!</h1>
+		<!-- NavBar -->
+		<nav class="container relative mx-auto justify-center p-6">
+			<!-- Flex Container -->
+			<div class="flex items-center justify-between">
+				<!-- Logo -->
+				<div class="pt-2">
+					<img src="../manage-landing-page-master/images/logo.svg" alt="logo" />
+				</div>
+				<!-- Menu Items -->
+				<div class="hidden space-x-6 md:flex">
+					<a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+					<a href="#" class="hover:text-darkGrayishBlue">Product</a>
+					<a href="#" class="hover:text-darkGrayishBlue">About Us</a>
+					<a href="#" class="hover:text-darkGrayishBlue">Careers</a>
+					<a href="#" class="hover:text-darkGrayishBlue">Community</a>
+				</div>
+				<!-- Button -->
+				<a
+					href=""
+					class="p-x-6 baseline hidden rounded-full bg-brightRed p-3 pt-2 text-white hover:bg-brightRedLight md:block"
+					>Get Started</a
+				>
+			</div>
+		</nav>
+		<!-- Hero Section -->
+
+		<section id="hero">
+			<!-- Flex Container -->
+			<div class="container flex"></div>
+		</section>
 	</body>
 </html>
