--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<!-- NavBar -->
-		<nav class="container relative mx-auto justify-center p-6">
+		<nav class="container relative mx-auto my-2 justify-center p-6">
 			<!-- Flex Container -->
 			<div class="flex items-center justify-between">
 				<!-- Logo -->
@@ -26,7 +26,7 @@
 				<!-- Button -->
 				<a
 					href=""
-					class="p-x-6 baseline hidden rounded-full bg-brightRed p-3 pt-2 text-white hover:bg-brightRedLight md:block"
+					class="baseline hidden rounded-full bg-brightRed p-3 px-6 pt-2 text-white hover:bg-brightRedLight md:block"
 					>Get Started</a
 				>
 			</div>
@@ -35,7 +35,36 @@
 
 		<section id="hero">
 			<!-- Flex Container -->
-			<div class="container flex"></div>
+			<div
+				class="container mx-auto mt-10 flex flex-col-reverse items-center space-y-0 px-6 md:flex-row md:space-y-0"
+			>
+				<!-- Left Item -->
+				<div class="mb-32 flex flex-col space-y-12 md:w-1/2">
+					<h1
+						class="max-w-md text-center text-4xl font-bold md:text-left md:text-5xl"
+					>
+						Bring everyone together to build better products.
+					</h1>
+					<p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
+						Manage makes it simple for software teams to plan day-to-day tasks
+						while keeping the larger team goals in view.
+					</p>
+					<div class="flex justify-center md:justify-start">
+						<a
+							href=""
+							class="baseline rounded-full bg-brightRed p-3 px-6 pt-2 text-white hover:bg-brightRedLight md:block"
+							>Get Started</a
+						>
+					</div>
+				</div>
+				<!--  Right item -->
+				<div class="flex md:w-1/2 xl:justify-end">
+					<img
+						src="../manage-landing-page-master/images/illustration-intro.svg"
+						alt=""
+					/>
+				</div>
+			</div>
 		</section>
 	</body>
 </html>
