--- a/src/index.html
+++ b/src/index.html
@@ -97,9 +97,9 @@
 								>
 									01
 								</div>
-								<!-- <h3 class="text-base font-bold md:mb-4 md:hidden">
+								<h3 class="text-base font-bold md:mb-4 md:hidden">
 									Track company-wide progress
-								</h3> -->
+								</h3>
 							</div>
 						</div>
 
@@ -135,7 +135,7 @@
 						</div>
 
 						<div>
-							<h3 class="mb-4 hidden text-lg font-bold md:block">
+							<h3 class="mb-4 text-lg font-bold md:block">
 								Advanced built-in reports
 							</h3>
 							<p class="text-darkGrayishBlue">
